# yolo-cv-training

./: .gitignore  README.md  example_datasets.md  pyproject.toml  requirements.txt
datasets/: example_datasets.md  reorganize_traffic_signs_dataset.py
notebooks/: .gitignore  yolo_training.ipynb
scripts/: MWPD.yaml  evaluate.py  inference.py  main.py  reorganize_traffic_signs_dataset.py  traffic_signs.yaml
scripts/runs/train/yolo_train_demo_potholes_e1_b32/: args.yaml  results.csv
scripts/runs/train/yolo_train_demo_traffic_signes_e1_b32/: args.yaml  results.csv
scripts/runs/train/yolo_train_demo_traffic_signs_local_e1_b32/: args.yaml  results.csv
scripts/runs/train/yolo_train_potholes_e60_b16/: args.yaml  results.csv
scripts/runs/train/yolo_train_potholes_e60_b16/test/: results.json
scripts/runs/train/yolo_train_traffic_signs_local_e60_b16/: args.yaml  results.csv
